# Rust-backend-template

./: Cargo.toml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: home.rs  mod.rs
tests/api/: health_check.rs  helpers.rs
