[package]
name = "actix-postgres-template"
version = "0.1.0"
edition = "2021"
authors = ["Shadrach Tayo"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config = "0.13.4"
serde = "1.0.193"
serde_derive = "1.0.188"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix = "0.4.0"
tracing-log = "0.2.0"
rand = { version = "0.8.5", features = ["std_rng"] }
anyhow = "1.0.75"
thiserror = "1"